# libaribcaption

./: .gitignore  CMakeLists.txt
include/aribcaption/: aribcc_config.h.in  renderer.hpp
src/renderer/: font_provider.cpp  font_provider_psvita.cpp  font_provider_psvita.hpp
test/psvita/: CMakeLists.txt  test.cpp
